--- a/Hospital Management System/appsettings.json
+++ b/Hospital Management System/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "ConnectionStrings": { "DefaultConnectionString": "Server=QAANP;database=HospitalManagementDB;uid=sa;pwd=Minhquan2005;TrustServerCertificate=True;" }
+  "ConnectionStrings": { "DefaultConnectionString": "Server=SAPLINGG\\SQLEXPRESS01;database=HospitalManagementDB;uid=sa;pwd=123;TrustServerCertificate=True;" }
 }
